# tnp

./: .gitignore
.github/workflows/: cmake.yml  cmake_win.yml
doc/: mat_core_isa.md  vec_core_isa.md
hw/mat/: mat_cache.sv  mat_control.sv  mat_core.sv  mat_core_sim  mat_core_sim.sv  mat_core_sim_verilator  mat_core_sim_verilator.sv  mat_data.sv  mat_data_type.sv  mat_defn.sv  mat_inst_decoder.sv  mat_inst_type.sv  mat_mem.sv  mat_mem_type.sv  mat_reg.sv  mat_tb.cpp  mat_unit.sv  mat_vec_unit.sv
hw/mat/test/: data_mem.txt  inst_mem.txt  mat_cache_test.sv  mat_control_test.sv  mat_unit_test.sv  run.sh
hw/mat/top/: top_2core  top_2core.sv
hw/proc/: u-16m4-16v4  u-16m4-16v4.sv  u-16m4-16v4_verilator  u-64m4-64v4  u-64m4-64v4.sv
hw/switch/: switch.sv  switch_receiver.sv  switch_sender.sv
hw/switch/test/: switch_test.sv
hw/vec/: vec_cache.sv  vec_control.sv  vec_core.sv  vec_core_sim  vec_core_sim.sv  vec_core_sim_verilator  vec_data.sv  vec_defn.sv  vec_inst_decoder.sv  vec_mem.sv  vec_reg.sv  vec_unit.sv
hw/vec/test/: run.sh  vec_cache_test.sv  vec_control_test.sv  vec_unit_test.sv
hw/vec/top/: top_2core  top_2core.sv
sw/: CMakeLists.txt
sw/common/: CMakeLists.txt  error.cpp  error.h  logging.cpp  logging.h  program.cpp  program.h  program.inl
sw/compiler/: CMakeLists.txt  Makefile  benchmark.cpp  common.h  compiler_common.cpp  compiler_common.h  mat_compiler.cpp  mat_compiler.h  matmul.cpp  orchestration.cpp  orchestration.h  primitive.h  relu.cpp  simulation.cpp  transpose.cpp
sw/compiler/benchmarkfiles/: gen_matrix.py  in-rand-512-512.txt  in-rand-w-xav-512-512.txt  w-xav-512-512.txt
sw/compiler/primitives/: relu.cpp  relu.h
sw/example/: CMakeLists.txt  mat_asm.cpp  mat_mult.cpp  mat_mult_flip.cpp  mat_mult_pipeline2.cpp  mat_mult_pipeline4.cpp  mat_sim.cpp  proc_u-16m4-16v4_sim.cpp  vec_add.cpp  vec_comm.cpp  vec_copy.cpp  vec_scale.cpp  vec_sim.cpp  vec_sim2.cpp
sw/hwtest/: CMakeLists.txt  mat_comm.cpp  vec_send_scalar.cpp
sw/mat_asm/: CMakeLists.txt  mat_asm.cpp  mat_format.cpp  mat_format.h  mat_program.cpp  mat_program.h  mat_program.inl
sw/mat_core/: CMakeLists.txt  mat_program.cpp  mat_program.h  mat_sim.cpp  mat_sim.h
sw/onnx/: 618.onnx  618small.onnx  CMakeLists.txt  X.txt  Y.txt  model.cpp  model.h  onnx.proto3.pb.cc  onnx.proto3.pb.h  operator.cpp  operator.h  tensor.cpp  tensor.h  test.cpp
sw/onnx/operators/: gemm.cpp  gemm.h  relu.cpp  relu.h
sw/scripts/: hint_resolve
sw/simulation/: CMakeLists.txt  mat_disas.cpp  mat_sim.cpp  mat_sim2.cpp  proc_u-16m4-16v4_sim.cpp  proc_u-64m4-64v4_sim.cpp  vec_disas.cpp
sw/switch/: CMakeLists.txt  switch.cpp  switch.h
sw/test/: CMakeLists.txt
sw/test/compiler_test/: CMakeLists.txt  orch_init.cpp  orch_matmul.cpp  orch_relu.cpp  orch_relu_transpose.cpp  orch_transpose.cpp  orch_transpose_self.cpp
sw/test/hwtest/: CMakeLists.txt  mat_add_row.cpp  mat_clear.cpp  mat_comm.cpp  mat_copy.cpp  mat_send_diag.cpp  mat_send_scalar.cpp  proc_u-16m4-16v4.cpp  proc_u-64m4-64v4.cpp
sw/vec_core/: CMakeLists.txt  vec_program.cpp  vec_program.h  vec_sim.cpp  vec_sim.h
